--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,9 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url('./assets/fonts/Lato-Regular.ttf') format('truetype');
-  }
-  
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./assets/fonts/Lato-Regular.ttf") format("truetype");
+}
